<resources>
    <string name="app_name">Rahisi Pay</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_id">User Id</string>
    <string name="login_pin">PIN</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot PIN?</string>
    <string name="change_pin">Change PIN</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="reset_pin_text">Enter PIN Reset Code</string>
    <string name="reset_pin_code">PIN Reset Code</string>
    <string name="new_pin">Enter New PIN</string>
    <string name="account_no">Account Number</string>
    <string name="block">Block</string>
    <string name="p_to_p">Send Money</string>
    <string name="scan_pay">Scan to Pay</string>
    <string name="pin">PIN</string>
    <string name="account_no_text">Account No:</string>
    <string name="card_no">Card No:</string>
    <string name="ph_no">Phone No:</string>
    <string name="email">Email:</string>
    <string name="balance">Balance:</string>
    <string name="date">Date:</string>
    <string name="nature">Nature:</string>
    <string name="desc">Description:</string>
    <string name="amount">Amount:</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="paid_to">Reference:</string>
    <string name="transaction_no">Transaction No:</string>
    <string name="receipt_no">Receipt No:</string>
    <string name="hint_amount">Amount</string>
    <string name="charges">Charges:</string>
    <string name="vat">VAT:</string>
    <string name="receipt">Receipt</string>
    <string name="visa">Pay with Visa</string>
    <string name="account">Account</string>
    <string name="close">Close</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="other_charge">Other Charges</string>
    <string name="con_new_pin">Confirm New PIN</string>
    <string name="current_pin">Enter Current PIN</string>
    <string name="act_num">Enter Account Number</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="your_bal">Your Balance</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pay_for">Pay For :</string>
    <string name="self">Self</string>
    <string name="Other">Other</string>
    <string name="service">Service</string>
    <string name="service_acc">Your Account No:</string>
    <string name="service_acc_no">Service Account No:</string>
    <string name="service_charge">Service Charge:</string>
    <string name="link">Link</string>
    <string name="unlink">UnLink</string>
    <string name="pay">Pay</string>
    <string name="alert_text">Are you sure you would like to pay:</string>
    <string name="block_card_reason">Enter Block Card Reason</string>
    <string name="block_msg">You will soon receive an SMS with the Card Block Code</string>
    <string name="card_block_code">Enter Card Block Code:</string>
    <string name="code">Code</string>
    <string name="msg">Your Card has been \n blocked. \n You will soon receive an SMS with a Card replace code.</string>
    <string name="msg1">Please visit your nearest \n agent to replace your \n card.</string>
    <string name="my_account">My Account</string>
    <string name="pin_entry">PIN</string>
    <string name="please_enter_pin">Please Enter PIN</string>
    <string name="c_w_s">CASH WITHDRAW SUCCESSFUL</string>
    <string name="c_w_d">CASH WITHDRAW DECLINED</string>
    <string name="t_m_s">TRANSFER MADE SUCCESSFULLY</string>
    <string name="t_d">TRANSFER DECLINED</string>
    <string name="p_s">PAYMENT SUCCESSFUL</string>
    <string name="p_d">PAYMENT DECLINED</string>
    <string name="reason">Agend Id Not Found</string>
    <string name="reason_merchant">Merchant Id Not Found</string>
    <string name="exchange_rate">FOREX INFO</string>
    <string name="kiasi">Total Amount: TZS</string>
    <string name="Checking">Performing forex...</string>
    <string name="loader_text_connect">Connecting to printer&#8230;</string>
    <string name="loader_text">Loading&#8230;</string>
    <string name="h_login_failure">Login Failed</string>
    <string name="max_retries">You have reached maximum retries!</string>
    <string name="forgot_message">Please Contact us on 0800 000006 or visit our office to reset your password</string>
    <string name="powered_by">Powered by</string>
    <string name="rahisi_scan">Pay with Rahisi</string>
    <string name="blocked_msg">Your Card is Blocked</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="mvisalogodesc">mVisaLogoDesc</string>
    <string name="transactions">Transactions</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="change_mpin">Change Pin</string>
    <string name="get_visa_number">Get Visa Number</string>
    <string name="logout">Logout</string>
    <string name="recent_transactions">RECENT TRANSACTIONS</string>
    <string name="title_notifications">Scan to Pay</string>
    <string name="send_money">Send Money</string>
    <string name="withdraw_cash">Withdraw Cash</string>
    <string name="pay_utility_desc">Click here to make utility payment</string>
    <string name="mvisa_payfriend">Transactions</string>
    <string name="mvisa_paymerchant">Home</string>
    <string name="mvisa_cash_withdrawal_desc">Access mVisa Payee List</string>
    <string name="agency_banking_cash_withdrawal">Withdraws Cash</string>
    <string name="agency_banking_cash_deposit">Cash Deposit</string>
    <string name="agency_banking_utility_payment">Balance Inquiry</string>
    <string name="agency_banking_account_openning">Account Openning</string>
    <string name="agency_bank">Pay with Uhuru Pay</string>
    <string name="agency_banking_top_up">Top Up</string>
    <string name="agency_banking_about_us">About Us</string>
    <string name="agency_banking_scanning">Pay Merchant</string>
    <string name="agency_banking_mvisa">Pay with Visa</string>
    <string name="payee_list">Payee List</string>
    <string name="inr">TZS</string>
    <string name="visa_on_mobile">Visa on Mobile App</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="settings"><b>Settings</b></string>
    <string name="merchant_qr_desc">Access mVisa Sales Summary</string>
    <string name="settingss">Access mVisa Settings</string>
    <string name="agency_banking_payment">Payment Merchant</string>
    <string name="agency_banking_transfer">Transfer Money</string>
    <string name="pay_utility">Utility Payment</string>
    <string name="agency_banking_payment_desc">Click to make payment</string>
    <string name="agency_banking_notification">Notification</string>
    <string name="h1_municipal_district">Municipals and District Councils</string>
    <string name="h1_data_tools">Data Tools</string>
    <string name="h1_settings">Settings</string>
    <string name="verification">Ticket Verification</string>
    <string name="h1_temporary">Temporary Payments</string>
    <string name="h1_permanent">Permanent Payments</string>
    <string name="h1_hospital">Hospital, Health Centre and Dispensary</string>
    <string name="h1_hospital_cash">Cash Payments</string>
    <string name="h1_hospital_bima">Bima Payments</string>
    <string name="h1_daladala_pay">Bus Fare</string>
    <string name="h1_takataka_register">Provide Customer Details</string>
    <string name="mvisa_payfriend_desc">Access mVisa Transactions</string>
    <string name="welcome_note">Welcome Again</string>
    <string name="welcome">Welcome</string>
    <string name="p_municipal_district">Make Payments for Municipal and District councils in Tanzania</string>
    <string name="p_data_tools">Data Collection Tools</string>
    <string name="p_settings">Change your Device Configurations</string>
    <string name="p_feature_not_allowed">This terminal is not allowed to perform this transaction </string>
    <string name="p_temporary">Make collection of fees from temporary sources e.g. Market fees etc.</string>
    <string name="p_permanent">Make collection of fees from permanent sources e.g. shops etc</string>
    <string name="p_hospital">Make collection of fees from hospital, health Center and Dispensary sources e.g. Registration etc</string>
    <string name="p_hospital_cash">Make collection of fees - Cash </string>
    <string name="p_hospital_bima">Make collection of fees -Bima</string>
    <string name="p_daladala_pay">Make Fare Collection and Ticketing  for Bus</string>
    <string name="agency_bank_desc">Pay with Umoja</string>
    <string name="mvisa_paymerchant_desc">Access mVisa Home</string>
    <string name="mvisa_deposit_desc">Click here to make Deposit</string>
    <string name="agency_banking_cash_withdrawal_desc">Click to view withdraws notifications</string>
    <string name="agency_banking_cash_deposit_desc">Click make a cash deposit </string>
    <string name="agency_banking_utility_payment_desc">Click to check balance</string>
    <string name="agency_banking_account_openning_desc">Click to Open An Account</string>
    <string name="agency_banking_top_up_desc">Click to Top Up</string>
    <string name="agency_banking_about_us_desc">Click to Know More About Us</string>
    <string name="agency_banking_scanning_desc">Click to make payment to Merchant</string>
    <string name="agency_banking_mvisa_desc"></string>
    <string name="rsp7101">Successful</string>
    <string name="rsp7201">Failure</string>
    <string name="rsp7202">Required Header is not given</string>
    <string name="rsp7203">Unauthorized</string>
    <string name="rsp7204">Bill does not exist</string>
    <string name="rsp7205">Invalid service provider</string>
    <string name="rsp7206">Service provider is not active</string>
    <string name="rsp7207">Duplicate payment</string>
    <string name="rsp7208">Invalid business account</string>
    <string name="rsp7209">Business account is not active</string>
    <string name="rsp7210">Collection account limit reached</string>
    <string name="rsp7211">Payment service provider code did not match Bill service provider code</string>
    <string name="rsp7212">Payment currency did not match Bill currency</string>
    <string name="rsp7213">Bill has expired</string>
    <string name="rsp7214">Insufficient amount paid</string>
    <string name="rsp7215">Invalid payment service provider</string>
    <string name="rsp7216">Payment service provider is not active</string>
    <string name="rsp7217">No paper email or phonenumber</string>
    <string name="rsp7219">Wrong currency</string>
    <string name="rsp7234">Wrong bill payment option</string>
    <string name="rsp7242">Payment Content Irregular</string>
    <string name="rsp7281">Invalid payment transaction date</string>
    <string name="rsp01">Incorrect Pin</string>
    <string name="rspUnkown">Transaction Declined</string>
    <string name="no_favourites">No favorite contacts added</string>
    <string name="payee_name">Payee Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_deletion"><b>Confirm Deletion</b></string>
    <string name="update">UPDATE</string>
    <string name="all_contacts">All Contacts</string>
    <string name="switch_phone">Switch to phone number</string>
    <string name="date_time">Date/Time :</string>
    <string name="txt_nature">Nature :</string>
    <string name="service_marchant">Service/Merchant :</string>
    <string name="txtamount">Amount :</string>
    <string name="txtcharges">Charges :</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="nature_all">Nature All</string>
    <string name="service_all">Service All</string>
</resources>