<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:text="@string/change_pin"
            android:gravity="center"
            android:fontFamily="@font/custom_font"
            android:textSize="17sp"
            android:id="@+id/title"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/title"
            android:hint="@string/current_pin"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:inputType="number"
            android:fontFamily="@font/custom_font"
            android:id="@+id/current_pin"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/current_pin"
            android:hint="@string/new_pin"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/custom_font"
            android:inputType="number"
            android:id="@+id/new_pin"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/new_pin"
            android:fontFamily="@font/custom_font"
            android:hint="@string/con_new_pin"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:inputType="number"
            android:id="@+id/con_new_pin"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:fontFamily="@font/custom_font"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/ok"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/ok"
            android:layout_below="@+id/con_new_pin"/>

    </RelativeLayout>

</RelativeLayout>