<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/custom_font"
            android:text="@string/pay_for"
            android:gravity="center"
            android:textSize="17sp"
            android:id="@+id/title"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:gravity="center"
            android:id="@+id/lin"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/custom_font"
                android:id="@+id/self"
                android:text="@string/self"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/custom_font"
                android:id="@+id/other"
                android:text="@string/Other"/>
        </LinearLayout>



        <Button
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/custom_font"
            android:id="@+id/ok"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/ok"
            android:layout_below="@+id/lin"/>

    </RelativeLayout>

</RelativeLayout>