<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.goandroytech.www.rahisipay.Database.AllContacts">

    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        >-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:src="@drawable/no_favourites"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/no_favourites"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/receipientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#a3a3a3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/payee_name"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:enabled="true"
        tools:ignore="RtlHardcoded,TextFields" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#a3a3a3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:enabled="true"
        tools:ignore="RtlHardcoded,TextFields" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#a3a3a3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:inputType="text"
        android:enabled="true"
        tools:ignore="RtlHardcoded,TextFields" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.rilixtech.CountryCodePicker
            android:id="@+id/ccp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:enabled="false"/>

        <EditText
            android:id="@+id/p_number"
            android:layout_toRightOf="@+id/ccp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="#a3a3a3"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:digits="0123456789"
            android:enabled="true"
            tools:ignore="RtlHardcoded,TextFields" />


</RelativeLayout>



    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Switch to Card number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:theme="@style/Button"
        />

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="0dp"
        android:layout_weight="1">
     <android.support.v7.widget.RecyclerView
        android:id="@+id/rvContacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:scrollbars="vertical"/>

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/contacts" />

</LinearLayout>
